<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        app:cardBackgroundColor="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp">

            <ImageView
                android:id="@+id/pizzaImage"
                android:layout_width="170dp"
                android:layout_height="175dp"
                android:contentDescription="@string/pizzapic"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/chicago_deluxe" />

            <TextView
                android:id="@+id/pizzaStyle"
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/pizza_style"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="@+id/pizzaCrust"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pizzaCrust"
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:layout_marginTop="12dp"
                android:text="@string/pizza_crust"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="@+id/toppings"
                app:layout_constraintTop_toBottomOf="@+id/pizzaStyle" />

            <TextView
                android:id="@+id/toppings"
                android:layout_width="75dp"
                android:layout_height="20dp"
                android:layout_marginTop="12dp"
                android:text="@string/toppings"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="@+id/pizzaToppingList"
                app:layout_constraintTop_toBottomOf="@+id/pizzaCrust" />

            <TextView
                android:id="@+id/pizzaToppingList"
                android:layout_width="197dp"
                android:layout_height="56dp"
                android:layout_marginTop="5dp"
                android:text="@string/pizzatoppinglist"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.555"
                app:layout_constraintStart_toEndOf="@id/pizzaImage"
                app:layout_constraintTop_toBottomOf="@+id/toppings" />

            <Button
                android:id="@+id/buttonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/add_to_order"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.79"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pizzaSizeGroup" />

            <RadioGroup
                android:id="@+id/pizzaSizeGroup"
                android:layout_width="175dp"
                android:layout_height="90dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/buttonText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pizzaToppingList">

                <RadioButton
                    android:id="@+id/smallPizzaPrice"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/small_pizza_price"
                    android:textColor="#000000"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                <RadioButton
                    android:id="@+id/mediumPizzaPrice"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/medium_pizza_price"
                    android:textColor="#000000"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                <RadioButton
                    android:id="@+id/largePizzaPrice"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/large_pizza_price"
                    android:textColor="#000000"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            </RadioGroup>

            <TextView
                android:id="@+id/pizzaFlavor"
                android:layout_width="160dp"
                android:layout_height="38dp"
                android:text="@string/deluxe"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/pizzaImage"
                app:layout_constraintEnd_toStartOf="@+id/pizzaStyle"
                app:layout_constraintHorizontal_bias="0.333"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.64" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>