<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-187dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/RU_Pizza"
                android:layout_width="235dp"
                android:layout_height="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="sans-serif-black"
                android:scaleX="2"
                android:scaleY="2"
                android:text="@string/ru_pizza"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FF0000"
                app:layout_constraintBottom_toTopOf="@+id/openPizzaOrder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/openPizzaOrder"
                android:layout_width="220dp"
                android:layout_height="161dp"
                android:contentDescription="@string/openpizzaorder"
                android:onClick="openPizzaOrder"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toTopOf="@+id/OrderPizza"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/main_chicago_pizza_pic" />

            <TextView
                android:id="@+id/OrderPizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/order_pizza"
                app:layout_constraintBottom_toTopOf="@+id/openCurrentOrder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageButton
                android:id="@+id/openCurrentOrder"
                android:layout_width="220dp"
                android:layout_height="161dp"
                android:contentDescription="@string/opencurrentorder"
                android:onClick="openCurrentOrder"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toTopOf="@+id/CurrentOrder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/main_current_order_pic" />

            <TextView
                android:id="@+id/CurrentOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/current_order"
                app:layout_constraintBottom_toTopOf="@+id/openStoreOrder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageButton
                android:id="@+id/openStoreOrder"
                android:layout_width="220dp"
                android:layout_height="161dp"
                android:contentDescription="@string/openstoreorder"
                android:onClick="openStoreOrder"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toTopOf="@+id/StoreOrder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/main_store_order_pic"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/StoreOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_order"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>