<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseToppingActivity">

    <TextView
        android:id="@+id/chooseToppingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_topping"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/available_toppings"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/availableList"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.254"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="64dp"
        android:text="@string/selected_toppings"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/selectedList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ListView
        android:id="@+id/selectedList"
        android:layout_width="150dp"
        android:layout_height="430dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="132dp"
        android:outlineProvider="bounds"
        android:outlineSpotShadowColor="#000000"
        android:outlineAmbientShadowColor="@color/light_grey"
        android:visibility="visible"
        android:background="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck"
        tools:visibility="visible">

    </ListView>

    <ListView
        android:id="@+id/availableList"
        android:layout_width="150dp"
        android:layout_height="430dp"
        android:outlineProvider="bounds"
        android:outlineSpotShadowColor="#000000"
        android:scrollbarSize="10dp"
        android:outlineAmbientShadowColor="@color/light_grey"
        android:visibility="visible"
        android:background="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="@+id/selectedList"
        app:layout_constraintEnd_toStartOf="@+id/selectedList"
        app:layout_constraintHorizontal_bias="0.344"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:onClick="placePizzaOrder"
        android:text="@string/add_to_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/availableList"
        app:layout_constraintVertical_bias="0.357" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="524dp"
        android:text="@string/tips_tap_the_topping_in_the_list_for_adding_and_removing"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="@string/price"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buildYourOwnPrice"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/buildYourOwnPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="68dp"
        android:text="@string/pizzaprice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button" />
</androidx.constraintlayout.widget.ConstraintLayout>